# Gerador-Open-GL

./: CMakeLists.txt  README.md  box.3d  box2.3d  cone.3d  cone100.3d  cone3.3d  cone50.3d  engine.cpp  generator.cpp  main.cpp  scene1.xml  testEngine.sh  testGenerator.sh
FASE1/: ENGINE  compile.sh  engine.cpp
FASE1/objects/: box.3d  sphere.3d
FASE1/scenes/: scene1.xml
FASE2/: CMakeLists.txt  ENGINE  GENERATOR  compile.sh  engine.cpp  generator.cpp  main.cpp  transformacao.h
FASE2/objects/: bomberman_sphere.3d  gasosos.3d  light_base.3d  light_box.3d  light_esfera.3d  light_luz.3d  light_sup.3d  luasU.3d  orbital.3d  sphere.3d
FASE2/scenes/: scene1.xml  sistemaSolar.xml  sistemaSolar2.xml  steve.xml
FASE3/: CMakeLists.txt  ENGINE  GENERATOR  compile.sh  engine.cpp  generator.cpp  transformacao.h
FASE3/objects/: luasS.3d  snowman_cone.3d  snowman_cylinder.3d  sol.3d
FASE3/scenes/: bomberman.xml  scene1.xml  sistemaSolar.xml  snowman.xml  spongebob.xml
FASE4/: CMakeLists.txt  ENGINE  GENERATOR  compile.sh  engine.cpp  generator.cpp  transformacao.h
FASE4/objects/: asteroid.3d  asteroide.3d  bomberman_cone.3d  bomberman_cylinder.3d  bomberman_cylinder2.3d  bomberman_head.3d  bomberman_sphere.3d  box.3d  boxNova.3d  cilindroNovo.3d  gasoso.3d  gasosos.3d  light_cone.3d  luasJ.3d  luasM.3d  luasN.3d  luass.3d  ring.3d  sol.3d  sphere.3d  steveTorso.3d  teapot.3d
FASE4/scenes/: light.xml  scene1.xml  scene2.xml  sistemaSolar.xml  steve.xml
objects/: box.3d  boxStacks.3d  cone.3d  cylinder.3d  plane.3d  sphere.3d
scenes/: scene1.xml  scene2.xml  scene3.xml  scene4.xml  scene5.xml
